--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html{
 }
 
 body{
-  padding:50px;
+  padding:20px;
   background-image: url("https://vip-go.shutterstock.com/blog/wp-content/uploads/sites/5/2020/05/shutterstock_407554567.jpg?w=750")
 }
 h2,h4,h3,p {
@@ -17,13 +17,12 @@ h2,h4,h3,p {
 
 #card {
   
-  width: 650px;
-  height:450px;
+  
   background-color: white;
   box-shadow: 2px 3px 7px 0px rgba(0,0,0,0.35);
   border-radius:6px;
   overflow:hidden;
-  margin-left:365px;
+  margin-left:0.5px;
 }
 
 #top-card {
@@ -46,7 +45,7 @@ h2,h4,h3,p {
    display: inline-block;
   background-color:#9DA65D;
   height:100%;
-  width:50%;
+  width:100%;
   vertical-align:top;
   padding:35px;
 
@@ -56,7 +55,7 @@ h2,h4,h3,p {
    display: inline-block;
   background-color:#6C733D;
   height:100%;
-  width:50%;
+  width:100%;
   vertical-align:top;
   padding:35px;
   
@@ -112,4 +111,16 @@ ol{
   padding:0px;
   list-style:none;
   opacity:0.8;
+}
+@media (min-width:640px){
+  #bottom-right, #bottom-left{
+    width:50%;    
+  }
+  #bottom-right{
+    height:100%;
+  }
+  #card{
+    width:600px;
+    height:435px;
+  }
 }
